# efs-restore

./: .gitignore  Makefile  README.md  pyproject.toml  template.yaml
.github/workflows/: publish.yaml
efs_restore/: efs_restore.py  efs_restore_lambda.py
scripts/: restore.py
